src/Chat.css
.chatWrapper {
  display: flex;
  flex-direction: column;
  gap: 40px;
  /* height: 100vh; */
  overflow: scroll;
  width: 60%;
}

.inputWrapper {
  position: absolute;
  bottom: 0px;
  width: 100%;
}

/* ChatApp.css */
.chat-app {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 40px;
  height: 100%;
  overflow: scroll;
  padding: 0px 20px;
}

.message-list::-webkit-scrollbar {
  display: none;
}

.message-list {
  flex: 1;
  overflow: scroll;
  max-height: 100%;
  /* position: absolute; */
  bottom: 200px;
  width: 60%;
  margin-top: 60px;

  margin-bottom: 90px;
  padding: 20px 0px;
}

.message-item {
  display: flex;
  align-items: flex-end;
  margin-bottom: 10px;
}

.sender {
  justify-content: flex-end;
}

.receiver {
  justify-content: flex-start;
}

.message-item.receiver .message-content {
  margin-left: 10px;
  border-radius: 20px;
  border-bottom-left-radius: 0px;
  background-color: #2c2b2d;
  color: #fff;
  margin-right: 50px;
  border: 1px solid #454145;
}
.message-item.sender .message-content {
  margin-right: 10px;
  border-radius: 20px;
  border-bottom-right-radius: 0px;
  background-color: #0b9565;
  color: #fff;
  margin-left: 50px;
}

.message-content {
  padding: 10px;
  border-radius: 8px;
  background-color: #e0e0e0;
  color: #000;
  max-width: 500px;
  text-align: justify;
  padding: 20px;
}

.sender .message-content {
  margin-left: 10px;
}

.talking-animation {
  width: 100%;
  height: auto;
  max-height: 200px;
  margin-bottom: 10px;
}

.typing-animation {
  width: 100px;
  height: 20px;
  margin-right: 10px;
  background-color: #e0e0e0;
  animation: typing 1s infinite;
  opacity: 0.5;
}

.video-wrapper {
  width: 70px;
  height: 70px;
  min-width: 70px;
  min-height: 70px;
  border-radius: 50%;
  overflow: hidden;
  background-size: cover;
  background-color: aquamarine;
  pointer-events: none;
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

@keyframes typing {
  0% {
    opacity: 0.5;
  }
  50% {
    opacity: 1;
  }
  100% {
    opacity: 0.5;
  }
}

.input-area {
  /* display: inline-flex; */
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 10px 20px;
  background-color: #2c2b2d;
  bottom: 0px;
  position: absolute;
  width: 100%;
  max-width: 100%;
}

.input-area input {
  padding: 15px;
  background-color: #1f1e20;
  border: 1px solid #454145;
  color: #fff;
  border-radius: 8px;
  width: 70%;
}

.input-area input:focus {
  outline: none;
}

.input-area button {
  margin-left: 10px;
  border: none;
  background-color: #0b9565;
  color: white;
  padding: 15px 25px;
  border-radius: 10px;
  cursor: pointer;
}

@media screen and (max-width: 420px) {
  .message-list {
    width: 100%;
  }

  .video-wrapper {
    width: 45px;
    height: 45px;
    min-width: 45px;
    min-height: 45px;
    border-radius: 50%;
    overflow: hidden;
    background-size: cover;
    background-color: aquamarine;
  }
  .input-area input {
    padding: 15px;
    background-color: #1f1e20;
    border: 1px solid #454145;
    color: #fff;
    border-radius: 8px;
    width: 60%;
  }
}

